--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -5,9 +5,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "strict": true,
-    "noEmit": true,
-    "noUncheckedSideEffectImports": true
+    "strict": true
   },
   "include": ["vite.config.ts"]
 }
