--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "pg": "^8.13.1",
+        "psql": "^0.0.1",
         "reflect-metadata": "^0.2.2",
         "typeorm": "^0.3.20"
     },
