--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@apollo/server": "^4.11.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "graphql": "^16.9.0",
         "pg": "^8.13.1",
         "psql": "^0.0.1",
         "reflect-metadata": "^0.2.2",
+        "type-graphql": "^2.0.0-rc.2",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
