--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "@apollo/server": "^4.11.0",
+        "apollo-server-express": "^3.13.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
