--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,19 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "graphql": "^16.9.0",
+        "ioredis": "^5.4.1",
         "pg": "^8.13.1",
         "psql": "^0.0.1",
+        "redis": "^4.7.0",
         "reflect-metadata": "^0.2.2",
         "type-graphql": "^2.0.0-rc.2",
+        "typedi": "^0.10.0",
         "typeorm": "^0.3.20"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/ioredis": "^4.28.10",
         "@types/node": "^22.7.9",
         "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
