--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "graphql": "^16.9.0",
+        "graphql-type-json": "^0.3.2",
         "ioredis": "^5.4.1",
         "pg": "^8.13.1",
         "psql": "^0.0.1",
