--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "graphql-type-json": "^0.3.2"
   }
 }
